# openGL_App

./: .gitattributes  .gitignore  CMakeLists.txt  main.c  main.cpp
glm/glm/detail/: type_half.inl
include/: colors.h  consts.h  types.h
lib/assimp/: unit
resources/: Info.plist  icon.icns
shaders/: fragmentShader.frag  lightShader.frag  vertexShader.vert
src/: Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  camera.cpp  camera.h  camera.hpp  glad.c  inputWorker.cpp  inputWorker.hpp  main.c  main.cpp  shader.cpp  shader.hpp
src/utils/: graphicUtils.c  graphicUtils.cpp  inputWorker.cpp  inputWorker.h  inputWorker.hpp  utils.c  utils.h
utils/: utils.h
